--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,18 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+TELEGRAM_BOT_TOKEN=""
+
+USER_ID_ONE=""
+USER_ID_TWO=""
+USER_ID_THREE=""
+USER_ID_FOUR=""
+
+
